Get api response and added all data to the table/added styles and animations/plugged the font

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
+@font-face {
+    font-family: 'Kablammo';
+    src: url('../src/assets/fonts/Kablammo-Regular.eot');
+    src: local('ComforterBrush'), url('../src/assets/fonts/Kablammo-Regular.woff') format('woff'), url('../src/assets/fonts/Kablammo-Regular.ttf') format('truetype');
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: black;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border: 1px solid white;
+    border-radius: 20px;
+    background-color: #000000;
+}
+
+::-webkit-scrollbar-track {
+    background-color: pink;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
