--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @font-face {
     font-family: 'Kablammo';
-    src: url('../src/assets/fonts/Kablammo-Regular.eot');
-    src: local('ComforterBrush'), url('../src/assets/fonts/Kablammo-Regular.woff') format('woff'), url('../src/assets/fonts/Kablammo-Regular.ttf') format('truetype');
+    src: url('../src/assets/fonts/Kablammo/Kablammo-Regular.eot');
+    src: local('ComforterBrush'), url('../src/assets/fonts/Kablammo/Kablammo-Regular.woff') format('woff'),
+    url('../src/assets/fonts/Kablammo/Kablammo-Regular.ttf') format('truetype');
 }
 
 * {
