--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -8,13 +8,17 @@
   text-align: center;
   border-collapse: collapse;
   @media (max-width: 768px) {
-    font-size: 13px;
+    letter-spacing: 1px;
+    font-size: 10px;
   }
 }
 
 th, td {
   padding: 8px;
   border: 1px solid #ccc;
+  @media (max-width: 768px) {
+    padding: 3px;
+  }
 }
 
 .table th {
@@ -102,26 +106,36 @@ th, td {
 .additional_header_wrap {
   background-color: lightgray !important;
   border: 2px solid pink;
-
 }
 
 .additional_header{
   background-color: lightgray !important;
   display: flex;
+  align-items: center;
   padding: 5px;
   justify-content: space-evenly;
+  @media (max-width: 768px) {
+    padding: 2px;
+    gap: 3px;
+  }
 }
 
 .button{
   background-color: black;
   border: white 2px solid;
   color: white;
-  border-radius: 10px;
-  padding: 5px;
-  font-size: 14px;
+  border-radius: 20px;
+  padding: 30px;
+  margin-top: 20px;
+  font-size: 18px;
   font-family: 'Kablammo', sans-serif;
   cursor: pointer;
-  box-shadow: black 0 0 10px;
+  box-shadow: white 0 0 30px;
+  @media (max-width: 768px) {
+    font-size: 10px;
+  padding: 2px;
+    box-shadow: white 0 0 5px;
+}
 }
 
 .button:hover{
